[UPDATE] project rules

--- a/.eslintrc
+++ b/.eslintrc
@@ -33,7 +33,8 @@
     "FormData": true,
     "FileReader": true,
     "Blob": true,
-    "navigator": true
+    "navigator": true,
+    "fetch": false
   },
   "parser": "babel-eslint"
 }
